Aggiunto phpMyAdmin alle competenze web development

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                             <span class="skill-tag">JavaScript</span>
                             <span class="skill-tag">PHP8</span>
                             <span class="skill-tag">MySQL</span>
+                            <span class="skill-tag">phpMyAdmin</span>
                             <span class="skill-tag">Python</span>
                         </div>
                     </div>
