Aggiornati interessi: rimosso cucina, aggiunto tecnologia

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <span class="interest-tag">⚽ Sport</span>
                     <span class="interest-tag">✈️ Viaggi</span>
                     <span class="interest-tag">🎮 Gaming</span>
-                    <span class="interest-tag">🍳 Cucina</span>
+                    <span class="interest-tag">💻 Tecnologia</span>
                 </div>
             </div>
 
