Oscurata sezione raccomandazioni

--- a/index.html
+++ b/index.html
@@ -652,7 +652,8 @@
                 </div>
             </div>
 
-            <!-- Testimonials Section -->
+            <!-- Testimonials Section - Hidden for now -->
+            <!--
             <div class="testimonials-section">
                 <h3 class="section-title">Raccomandazioni</h3>
                 <div class="testimonial-card">
@@ -670,6 +671,7 @@
                     </div>
                 </div>
             </div>
+            -->
         </div>
     </div>
 
