Aggiunto CV PDF scaricabile con stessa struttura del sito

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
             <!-- Download CV Section -->
             <div class="download-section">
-                <a href="#" class="download-btn" id="downloadCV">
+                <a href="cv-pietro-zingarelli.pdf" class="download-btn" id="downloadCV" download>
                     <i class="fas fa-download"></i>
                     <span>Scarica CV PDF</span>
                 </a>
